--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "workshopper",
-  "version": "2.7.0",
+  "name": "@timothygu/workshopper",
+  "version": "2.7.1",
   "description": "A terminal workshop runner framework",
   "main": "./workshopper.js",
-  "author": "Rod Vagg <rod@vagg.org> (https://github.com/rvagg)",
+  "author": "Rod Vagg <rod@vagg.org> (https://github.com/)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rvagg/workshopper.git"
+    "url": "https://github.com/TimothyGu/workshopper.git"
   },
   "license": "MIT",
   "dependencies": {
@@ -17,7 +17,7 @@
     "mkdirp": "~0.3.5",
     "msee": "~0.1.1",
     "optimist": "~0.6.1",
-    "terminal-menu": "^2.1.1",
+    "@timothygu/terminal-menu": "^2.1.2",
     "visualwidth": "~0.0.1",
     "xtend": "~3.0.0"
   },
